filechannel Cursors without the prior NioDrivers